# krewetka

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.mock.yaml  docker-compose.yaml  model-flow-or-malicious.ipynb
.github/workflows/: build_collector_binary.yaml  cargo_tests.yaml  ci.yaml  docker_build.yaml  test_and_build.yaml  units_and_builds.yaml
chart/: Chart.yaml  README.md  values.yaml
chart/charts/krewetka/: values.yaml
chart/charts/krewetka/templates/: _helpers.tpl
chart/charts/krewetka/templates/classifier/: config-map.yaml  deployment.yaml  svc.yaml
chart/charts/krewetka/templates/processor/: namespace.yaml  secret.yaml
chart/charts/krewetka/templates/reporting/: deployment.yaml  ingress.yaml  secret.yaml  svc.yaml
classification/: Dockerfile  ML-pipeline.ipynb  README.md  classifier_client.py  classifier_server.py  flow-or-malicious.model  requirements.txt
classification/Datasets/Features/: Features.csv
classification/Searching best model/: flow-or-malicious-best-model-search.ipynb
classification/proto/: flow.proto  flow_pb2.py
collector/: Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  README.md  build.rs  prebuild.sh
collector/src/: application_state.rs  config.rs  flow.rs  lib.rs  main.rs  settings.rs
collector/src/exporters/: errors.rs  exporter.rs  kafka.rs  mod.rs
collector/src/importers/: import.rs  mod.rs  zmq.rs
deploy/: Chart.yaml  README.md  aks.tf  creds.tf  main.tf  outputs.tf  values.yaml  variables.tf  vnet.tf
deploy/charts/krewetka/: Chart.yaml  values.yaml
deploy/charts/krewetka/templates/: ingress.yaml
deploy/charts/krewetka/templates/classifier/: deployment.yaml  svc.yaml
dummy-importer/: Dockerfile  producer.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/Components/DataChart/: Data.js  DataChart.js
frontend/src/Components/PieCharts/: PieCharts.js
frontend/src/Components/TableData/: TableData.css  TableData.js
krewetka-collector/: Cargo.toml  Cross.toml  Dockerfile  build.rs  prebuild.sh
krewetka-collector/src/: application_state.rs  config.rs  flow.rs  lib.rs  main.rs  settings.rs
krewetka-collector/src/cli_deprecated/: mod.rs
krewetka-collector/src/cli_deprecated/settings.rs/: mod.rs
krewetka-collector/src/exporters/: errors.rs  exporter.rs  kafka.rs
krewetka-collector/src/importers/: errors.rs  import.rs  zmq.rs
krewetka-collector/src/proto/: flow.proto
krewetka-processor/: .dockerignore  Cargo.toml  Dockerfile  build.rs  flow.rs
krewetka-processor/src/: application_state.rs  buffer.rs  classification_client.rs  consts.rs  flow.rs  lib.rs  main.rs  settings.rs
krewetka-processor/src/actors/: broker.rs  messages.rs  mod.rs
krewetka-processor/src/actors/acker/: acknowlege_actor.rs  messages.rs
krewetka-processor/src/actors/classification_client_grpc/: client.rs  tests.rs
krewetka-processor/src/actors/event_reader/: kafka.rs  mod.rs  reader.rs  topic.rs
krewetka-processor/src/actors/storage/: astorage.rs  clickhouse.rs  consts.rs  mod.rs
krewetka-processor/src/migrator/: cli.rs  creator.rs  migrate.rs  mod.rs
krewetka-processor/src/migrator/clickhouse/: applier.rs  mod.rs
krewetka-processor/src/migrator/clickhouse/migrations/: 1663951036.sql
krewetka-processor/src/storage/: astorage.rs  clickhouse.rs  mod.rs
krewetka-processor/src/transport/: kafka.rs  mod.rs  utils.rs
processor/: Cargo.toml  Dockerfile  README.md  build.rs
processor/src/: application_state.rs  consts.rs  flow.rs  handler.rs  lib.rs  settings.rs
processor/src/actors/: consts.rs  messages.rs  mod.rs
processor/src/actors/acker/: acknowlege_actor.rs  kafka.rs  messages.rs  mod.rs
processor/src/actors/classification_client_grpc/: client.rs
processor/src/actors/event_stream/: actor.rs  consts.rs  errors.rs  kafka.rs  messages.rs  mod.rs  producer.rs  reader.rs  retrier.rs  topic.rs  transport.rs
processor/src/actors/storage/: clickhouse.rs  consts.rs  messages.rs  mod.rs  storage_actor.rs
processor/src/migrator/: cli.rs  creator.rs
processor/src/migrator/clickhouse/: applier.rs  mod.rs
proto/: flow.proto  flow_pb2_grpc.py
reporting/: .dockerignore  Cargo.toml  Dockerfile  README.md  asyncapi.yaml
reporting/src/: client.rs  main.rs
reporting/src/app/: config.rs  db.rs  doc.rs  errors.rs  handlers.rs  mod.rs  models.rs  router.rs  state.rs  utils.rs  ws_handlers.rs  ws_tests.rs
reporting/src/app/handlers/: doc.rs  flow_stats.rs  flows_details_ws.rs  health.rs  mod.rs  routes.rs  standard_filter_query_params.rs  throughput_ws.rs
src/: cli.rs  config.rs  exporters.rs  lib.rs  main.rs  settings.rs  zeromq.rs
src/cli/: cli.rs
src/cli/settings.rs/: zmq.rs
src/exporters/: errors.rs  exporter.rs  kafka.rs  mod.rs  publisher.rs
src/importers/: dummy.rs  errors.rs  import.rs  mod.rs  zmq.rs
(+21 files in other folders)
