[package]
name = "rasp-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
clap = { version = "3.2.20", features = ["yaml", "derive"] }
log = "0.4.17"
env_logger = "0.9.0"
kafka = "0.9"

[features]
vendored-zmq = ['zmq/vendored']
