[package]
name = "krewetka-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = { version = "0.9.2", features = ["vendored"] }
clap = { version = "3.2.20", features = ["yaml", "derive"] }
log = "0.4.17"
env_logger = "0.9.0"
rdkafka = { version = "0.28.0", features = ["cmake-build", "libz-static"] }
config = "0.13.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.11"
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
tokio-stream = "0.1.9"
lazy_static = "1.4.0"
async-trait = "0.1.57"
sys-info = "0.9.1"
prost = "0.10"
tonic = "0.8.1"
bytes = "1.2.1"

[build-dependencies]
tonic-build = "0.8.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
test-case = "2.2.1"
serial_test = "0.9.0"
criterion = "0.3.6"
mockall = "0.11.2"
tokio-test = "0.4.2"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "krewetka-collector"
path = "src/main.rs"

#[[bench]]
#name = "exporter_bench"
#harness = false
