[package]
name = "krewetka-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
rdkafka = { version = "0.28.0" }
tokio = { version = "1.21.0", features = ["full"] }
clickhouse-rs = "0.1.21"
async-trait = "0.1.57"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.11"
serde_json = "1.0.85"
config = "0.13.2"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "krewetka-processor"
path = "src/main.rs"