[package]
name = "krewetka-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
rdkafka = { version = "0.28.0" }
tokio = { version = "1.21.0", features = ["full"] }
clickhouse-rs = { git = "https://github.com/suharev7/clickhouse-rs.git", rev = "e40016bbc7546fb4d32340db074d3c66643cd5ca" }
async-trait = "0.1.57"
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.11"
serde_json = "1.0.85"
config = "0.13.2"
tonic = "0.8.2"
prost = "0.11"
bytes = "1.2.1"
tokio-stream = { version = "0.1.10", features = ["net", "sync"] }
url = "2.3.1"
regex = "1.6.0"
lazy_static = "1.4.0"
clap = { version = "4.0.0-rc.2", features = ["derive"] }
chrono = "0.4.22"
futures = "0.3.24"
async-stream = "0.3.3"
actix = "0.13.0"

[build-dependencies]
tonic-build = "0.8.2"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "krewetka-processor"
path = "src/bin/processor.rs"

[[bin]]
name = "krewetka-migrator"
path = "src/bin/migrator.rs"
